fixed layout overflow issue

--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,7 @@ article, aside, details, figcaption, figure, footer, header, main, nav, section,
   flex: 1;
 }
 
+
 /************************* STICKY FOOTER  *************************/
 /* Kansasnew SemiBold
 		font-family: kansasnew, serif;
@@ -45,6 +46,7 @@ body {
   font-family: 'Montserrat', sans-serif;
   font-weight: 300;
   color: #292324;
+  overflow-x: hidden;
 }
 
 header {
